--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    
 </head>
 <body>
-    
+    <h1>recipes</h1>
+    <ul>
+    <li><a href="recipe/beefburger.html">beefburger</a></li>
+   <li> <a href="recipe/chickenburger.html">chickenburger</a></li>
+    <li><a href="recipe/fishburger.html">fishburger</a></li>
+    </ul>
 </body>
 </html>
